--- a/.drone.yml
+++ b/.drone.yml
@@ -10,3 +10,8 @@ pipeline:
     image: node:alpine
     commands:
       - yarn test
+
+  notify:
+    image: plugins/slack
+    chanel: drone
+    webhook: https://hooks.slack.com/services/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
